--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,9 @@
 body {
     height: 100vh;
     margin: 0;
-}
-
-div{
     display: grid;
     grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr 6fr; 
-    height: 122vh;
-    margin: 0;   
+    grid-template-rows: 1fr 6fr;  
 }
 
 nav {
@@ -17,6 +12,7 @@ nav {
     background-color: #D9E2D5;
     display: flex;
     align-items: center;
+    border-bottom: 3px solid darkgreen;
 }
 
 main {
@@ -27,9 +23,9 @@ main {
 article {
     grid-column: 2;
     grid-row: 2;
-    background-color: rgba(255, 255, 255, 0.322);
-    padding: 2rem;
-    backdrop-filter: blur(10px);
+    padding: 5rem 2rem;
+    color: rgb(1, 31, 1);
+    background-color: #D9E2D5;
 }
 
 li {
@@ -51,14 +47,19 @@ ul{
 }
 
 .img1{
-    width: 100%;
-    position: absolute;
-    top: -1rem;
-    z-index: -1;
+    grid-column: 1;
+    grid-row: 2;
+    height: 30.6rem;
+    width: 59rem;
 }
 
 a{
     text-decoration: none;
     color: darkgreen;
     font-size: 1.5rem;
+}
+
+h1 {
+    text-align: center;
+    padding-top: 3rem;
 }
