--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,31 @@
 body {
-    height: 100vh;
     margin: 0;
+}
+
+#index_container {
+    height: 100vh;
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 6fr;  
 }
 
-nav {
+#sida2_container {
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 6fr;  
+    background-image: url("../img/background.jpg");
+    background-size: cover;
+}
+
+#sida3_container {
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 6fr;
+}
+
+#index_nav {
     grid-column: 1 /span 2;
     grid-row: 1;
     background-color: #D9E2D5;
@@ -15,12 +34,30 @@ nav {
     border-bottom: 3px solid darkgreen;
 }
 
-main {
+#sida2_nav {
+    grid-column: 1 /span 5;
+    grid-row: 1;
+    background-color: #D9E2D5;
+    display: flex;
+    align-items: center;
+    border-bottom: 3px solid darkgreen; 
+}
+
+#sida3_nav {
+    grid-column: 1 /span 2;
+    grid-row: 1;
+    background-color: #D9E2D5;
+    display: flex;
+    align-items: center;
+    border-bottom: 3px solid darkgreen;
+}
+
+#index_main {
     grid-column: 1;
     grid-row: 2;
 }
 
-article {
+#index_article {
     grid-column: 2;
     grid-row: 2;
     padding: 5rem 2rem;
@@ -28,9 +65,40 @@ article {
     background-color: #D9E2D5;
 }
 
-li {
+#sida2_article {
+    grid-column: 1;
+    grid-row: 2;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+#sida2_article2 {
+    grid-column: 2;
+    grid-row: 2;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+#sida2_article3 {
+    grid-column: 3;
+    grid-row: 2;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.li_nav {
     padding-right: 12rem;
     text-align: center;
+}
+
+
+.li_sida2 {
+    padding-right: 5rem;
+    text-align: center;
+    font-size: 1.3rem;
 }
 
 ul{
@@ -51,6 +119,11 @@ ul{
     grid-row: 2;
     height: 30.6rem;
     width: 59rem;
+}
+
+.img2 {
+    height: 10rem;
+    width: 20rem;
 }
 
 a{
